--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 	    body{
 	    	margin:0;
 	    	padding:0;
+	    	min-width: 1000px;
 	    }
 	    .content{
-	    	position: fixed;
+	    	position: absolute;
 	    	left: 0;
 	    	top: 0;
 	    	bottom: 0;
@@ -17,21 +18,27 @@
 	    	background: url("grid.jpg") center center no-repeat #fff;
 	    	background-size: cover;
 	    }
-	    .center{
+	    .holder{
 	    	display: block;
-	    	width: 1000px;
+	    	width: 100%;
 	    	height: 582px;
-	    	position: fixed;
+	    	position: absolute;
 	    	top: 50%;
-	    	left: 50%;
-	    	margin-left: -500px;
+	    	left: 0;
 	    	margin-top: -291px;
+	    	text-align: center;
+	    }
+	    .holder img{
+	    	display: inline-block;
+	    	padding:0;
 	    }
     </style>
    </head>
    <body>
    		<div class="content">
-   			<img class="center" src="coming-soon-final.png" />
+	   		<div class="holder">
+	   			<img src="coming-soon-final.png" />
+	   		</div>
    		</div>
    </body>
  </html>
