--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	    body{
 	    	margin:0;
 	    	padding:0;
-	    	min-width: 1000px;
 	    }
 	    .content{
 	    	position: absolute;
@@ -21,11 +20,10 @@
 	    .holder{
 	    	display: block;
 	    	width: 100%;
-	    	height: 582px;
+	    	height: 560px;
 	    	position: absolute;
-	    	top: 50%;
+	    	top:  0px;
 	    	left: 0;
-	    	margin-top: -291px;
 	    	text-align: center;
 	    }
 	    .holder img{
