--- a/index.html
+++ b/index.html
@@ -18,25 +18,20 @@
 	    	background-size: cover;
 	    }
 	    .holder{
-	    	display: block;
-	    	width: 100%;
-	    	height: 560px;
 	    	position: absolute;
-	    	top:  0px;
 	    	left: 0;
-	    	text-align: center;
-	    }
-	    .holder img{
-	    	display: inline-block;
-	    	padding:0;
+	    	top: 0;
+	    	bottom: 0;
+	    	right: 0;
+	    	background: url("coming-soon-final.png") center top no-repeat;
+	    	background-size: contain;
 	    }
     </style>
    </head>
    <body>
    		<div class="content">
-	   		<div class="holder">
-	   			<img src="coming-soon-final.png" />
-	   		</div>
+   		</div>
+   		<div class="holder">
    		</div>
    </body>
  </html>
